@@ -89,28 +89,28 @@ ext {
     lettuceVersion = '6.2.1.RELEASE'
     log4jVersion = '2.19.0'
     mailVersion = '2.0.1'
-    micrometerVersion = '1.10.0-RC1'
-    micrometerTracingVersion = '1.0.0-RC1'
+    micrometerVersion = '1.10.0-SNAPSHOT'
+    micrometerTracingVersion = '1.0.0-SNAPSHOT'
     mockitoVersion = '4.8.0'
     mongoDriverVersion = '4.7.2'
     mysqlVersion = '8.0.30'
     pahoMqttClientVersion = '1.2.5'
     postgresVersion = '42.5.0'
     r2dbch2Version = '1.0.0.RC1'
-    reactorVersion = '2022.0.0-RC1'
+    reactorVersion = '2022.0.0-SNAPSHOT'
     resilience4jVersion = '1.7.1'
     romeToolsVersion = '1.18.0'
     rsocketVersion = '1.1.3'
     servletApiVersion = '5.0.0'
     smackVersion = '4.4.6'
-    springAmqpVersion = project.hasProperty('springAmqpVersion') ? project.springAmqpVersion : '3.0.0-RC1'
-    springDataVersion = project.hasProperty('springDataVersion') ? project.springDataVersion : '2022.0.0-RC1'
-    springGraphqlVersion = '1.1.0-RC1'
-    springKafkaVersion = '3.0.0-RC1'
-    springRetryVersion = '2.0.0-RC2'
-    springSecurityVersion = project.hasProperty('springSecurityVersion') ? project.springSecurityVersion : '6.0.0-RC1'
-    springVersion = project.hasProperty('springVersion') ? project.springVersion : '6.0.0-RC1'
-    springWsVersion = '4.0.0-RC1'
+    springAmqpVersion = project.hasProperty('springAmqpVersion') ? project.springAmqpVersion : '3.0.0-SNAPSHOT'
+    springDataVersion = project.hasProperty('springDataVersion') ? project.springDataVersion : '2022.0.0-SNAPSHOT'
+    springGraphqlVersion = '1.1.0-SNAPSHOT'
+    springKafkaVersion = '3.0.0-SNAPSHOT'
+    springRetryVersion = '2.0.0-SNAPSHOT'
+    springSecurityVersion = project.hasProperty('springSecurityVersion') ? project.springSecurityVersion : '6.0.0-SNAPSHOT'
+    springVersion = project.hasProperty('springVersion') ? project.springVersion : '6.0.0-SNAPSHOT'
+    springWsVersion = '4.0.0-SNAPSHOT'
     testcontainersVersion = '1.17.5'
     tomcatVersion = '10.0.23'
     xmlUnitVersion = '2.9.0'
@@ -284,7 +284,7 @@ configure(javaProjects) { subproject ->
 
         testRuntimeOnly 'org.apache.logging.log4j:log4j-core'
         testRuntimeOnly 'org.apache.logging.log4j:log4j-jcl'
-        testRuntimeOnly 'org.apache.logging.log4j:log4j-slf4j-impl'
+        testRuntimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl'
     }
 
     // enable all compiler warnings; individual projects may customize further
@@ -933,6 +933,12 @@ project('spring-integration-stomp') {
         testRuntimeOnly 'org.springframework:spring-webmvc'
         testRuntimeOnly 'io.projectreactor.netty:reactor-netty-http'
     }
+
+    tasks.withType(JavaForkOptions) {
+        jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.rmi/sun.rmi.transport=ALL-UNNAMED'
+    }
 }
 
 project('spring-integration-stream') {
@@ -997,6 +1003,12 @@ project('spring-integration-websocket') {
         testImplementation "org.apache.tomcat.embed:tomcat-embed-websocket:$tomcatVersion"
 
         testRuntimeOnly 'com.fasterxml.jackson.core:jackson-databind'
+    }
+
+    tasks.withType(JavaForkOptions) {
+        jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                '--add-opens', 'java.rmi/sun.rmi.transport=ALL-UNNAMED'
     }
 }
 
